test/TestSuite/Syntax/Errors/no_token_match2.tjp
project test "Test" "1.0" 2009-08-25 +2m 

# MARK: error 5 no_token_match
task t -8<-
  foo